[Refactor] 전체경로 허용 설정